# k8s-pod-foamtree

./: .dockerignore  .flake8  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  bandit.yaml  k8sfoams  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: build-artifacts.yml  github-actions-demo.yml  release.yaml  release.yml  tests.yaml
k8sfoam/app/: app.py
k8sfoam/app/k8s/: k8s_client.py
k8sfoam/app/utils/: extractors.py  mappers.py
k8sfoam/src/: app.py
k8sfoam/src/frontend/: app.jsx  index.html  index.js  package-lock.json  package.json  style.css  styles.css  treemap.jsx  worker.js
k8sfoam/src/k8s/: k8s_client.py
k8sfoam/src/utils/: extractors.py  mappers.py
k8sfoam/tests/: test_app.py
k8sfoam/tests/common/: mocks.py
k8sfoam/tests/k8s/: test_k8s_client.py
k8sfoam/tests/utils/: test_extractors.py  test_mappers.py
src/: webserver.py
src/app/: app.py
src/app/common/: dtos.py
src/app/k8s/: k8s_client.py
src/app/utils/: extractors.py  mappers.py
src/tests/: test_app.py
src/tests/k8s/: test_k8s_client.py
src/tests/utils/: test_extractors.py  test_mappers.py
